// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`can handle erroring actions 1`] = `
[
  {
    "allParentIds": [],
    "args": [
      "black",
    ],
    "id": 107,
    "name": "startFetch",
    "parentActionEvent": undefined,
    "parentEvent": undefined,
    "parentId": 0,
    "rootId": 107,
    "type": "action",
  },
  {
    "allParentIds": [
      107,
    ],
    "args": [
      "black",
    ],
    "id": 108,
    "name": "fetchData",
    "parentActionEvent": {
      "allParentIds": [],
      "args": [
        "black",
      ],
      "id": 107,
      "name": "startFetch",
      "parentActionEvent": undefined,
      "parentEvent": undefined,
      "parentId": 0,
      "rootId": 107,
      "type": "action",
    },
    "parentEvent": {
      "allParentIds": [],
      "args": [
        "black",
      ],
      "id": 107,
      "name": "startFetch",
      "parentActionEvent": undefined,
      "parentEvent": undefined,
      "parentId": 0,
      "rootId": 107,
      "type": "action",
    },
    "parentId": 107,
    "rootId": 107,
    "type": "flow_spawn",
  },
  {
    "allParentIds": [
      107,
    ],
    "args": [
      undefined,
    ],
    "id": 108,
    "name": "fetchData",
    "parentActionEvent": {
      "allParentIds": [],
      "args": [
        "black",
      ],
      "id": 107,
      "name": "startFetch",
      "parentActionEvent": undefined,
      "parentEvent": undefined,
      "parentId": 0,
      "rootId": 107,
      "type": "action",
    },
    "parentEvent": {
      "allParentIds": [],
      "args": [
        "black",
      ],
      "id": 107,
      "name": "startFetch",
      "parentActionEvent": undefined,
      "parentEvent": undefined,
      "parentId": 0,
      "rootId": 107,
      "type": "action",
    },
    "parentId": 107,
    "rootId": 107,
    "type": "flow_resume",
  },
  {
    "allParentIds": [
      107,
    ],
    "args": [
      "black",
    ],
    "id": 108,
    "name": "fetchData",
    "parentActionEvent": {
      "allParentIds": [],
      "args": [
        "black",
      ],
      "id": 107,
      "name": "startFetch",
      "parentActionEvent": undefined,
      "parentEvent": undefined,
      "parentId": 0,
      "rootId": 107,
      "type": "action",
    },
    "parentEvent": {
      "allParentIds": [],
      "args": [
        "black",
      ],
      "id": 107,
      "name": "startFetch",
      "parentActionEvent": undefined,
      "parentEvent": undefined,
      "parentId": 0,
      "rootId": 107,
      "type": "action",
    },
    "parentId": 107,
    "rootId": 107,
    "type": "flow_throw",
  },
]
`;

exports[`empty sequence works 1`] = `
[
  {
    "allParentIds": [],
    "args": [
      "black",
    ],
    "id": 111,
    "name": "startFetch",
    "parentActionEvent": undefined,
    "parentEvent": undefined,
    "parentId": 0,
    "rootId": 111,
    "type": "action",
  },
  {
    "allParentIds": [
      111,
    ],
    "args": [
      "black",
    ],
    "id": 112,
    "name": "fetchData",
    "parentActionEvent": {
      "allParentIds": [],
      "args": [
        "black",
      ],
      "id": 111,
      "name": "startFetch",
      "parentActionEvent": undefined,
      "parentEvent": undefined,
      "parentId": 0,
      "rootId": 111,
      "type": "action",
    },
    "parentEvent": {
      "allParentIds": [],
      "args": [
        "black",
      ],
      "id": 111,
      "name": "startFetch",
      "parentActionEvent": undefined,
      "parentEvent": undefined,
      "parentId": 0,
      "rootId": 111,
      "type": "action",
    },
    "parentId": 111,
    "rootId": 111,
    "type": "flow_spawn",
  },
  {
    "allParentIds": [
      111,
    ],
    "args": [
      undefined,
    ],
    "id": 112,
    "name": "fetchData",
    "parentActionEvent": {
      "allParentIds": [],
      "args": [
        "black",
      ],
      "id": 111,
      "name": "startFetch",
      "parentActionEvent": undefined,
      "parentEvent": undefined,
      "parentId": 0,
      "rootId": 111,
      "type": "action",
    },
    "parentEvent": {
      "allParentIds": [],
      "args": [
        "black",
      ],
      "id": 111,
      "name": "startFetch",
      "parentActionEvent": undefined,
      "parentEvent": undefined,
      "parentId": 0,
      "rootId": 111,
      "type": "action",
    },
    "parentId": 111,
    "rootId": 111,
    "type": "flow_resume",
  },
  {
    "allParentIds": [
      111,
    ],
    "args": [
      undefined,
    ],
    "id": 112,
    "name": "fetchData",
    "parentActionEvent": {
      "allParentIds": [],
      "args": [
        "black",
      ],
      "id": 111,
      "name": "startFetch",
      "parentActionEvent": undefined,
      "parentEvent": undefined,
      "parentId": 0,
      "rootId": 111,
      "type": "action",
    },
    "parentEvent": {
      "allParentIds": [],
      "args": [
        "black",
      ],
      "id": 111,
      "name": "startFetch",
      "parentActionEvent": undefined,
      "parentEvent": undefined,
      "parentId": 0,
      "rootId": 111,
      "type": "action",
    },
    "parentId": 111,
    "rootId": 111,
    "type": "flow_return",
  },
]
`;

exports[`typings 1`] = `
[
  {
    "allParentIds": [],
    "args": [
      "black",
    ],
    "id": 109,
    "name": "startFetch",
    "parentActionEvent": undefined,
    "parentEvent": undefined,
    "parentId": 0,
    "rootId": 109,
    "type": "action",
  },
  {
    "allParentIds": [
      109,
    ],
    "args": [
      "black",
    ],
    "id": 110,
    "name": "fetchData",
    "parentActionEvent": {
      "allParentIds": [],
      "args": [
        "black",
      ],
      "id": 109,
      "name": "startFetch",
      "parentActionEvent": undefined,
      "parentEvent": undefined,
      "parentId": 0,
      "rootId": 109,
      "type": "action",
    },
    "parentEvent": {
      "allParentIds": [],
      "args": [
        "black",
      ],
      "id": 109,
      "name": "startFetch",
      "parentActionEvent": undefined,
      "parentEvent": undefined,
      "parentId": 0,
      "rootId": 109,
      "type": "action",
    },
    "parentId": 109,
    "rootId": 109,
    "type": "flow_spawn",
  },
  {
    "allParentIds": [
      109,
    ],
    "args": [
      undefined,
    ],
    "id": 110,
    "name": "fetchData",
    "parentActionEvent": {
      "allParentIds": [],
      "args": [
        "black",
      ],
      "id": 109,
      "name": "startFetch",
      "parentActionEvent": undefined,
      "parentEvent": undefined,
      "parentId": 0,
      "rootId": 109,
      "type": "action",
    },
    "parentEvent": {
      "allParentIds": [],
      "args": [
        "black",
      ],
      "id": 109,
      "name": "startFetch",
      "parentActionEvent": undefined,
      "parentEvent": undefined,
      "parentId": 0,
      "rootId": 109,
      "type": "action",
    },
    "parentId": 109,
    "rootId": 109,
    "type": "flow_resume",
  },
  {
    "allParentIds": [
      109,
    ],
    "args": [
      "tea",
    ],
    "id": 110,
    "name": "fetchData",
    "parentActionEvent": {
      "allParentIds": [],
      "args": [
        "black",
      ],
      "id": 109,
      "name": "startFetch",
      "parentActionEvent": undefined,
      "parentEvent": undefined,
      "parentId": 0,
      "rootId": 109,
      "type": "action",
    },
    "parentEvent": {
      "allParentIds": [],
      "args": [
        "black",
      ],
      "id": 109,
      "name": "startFetch",
      "parentActionEvent": undefined,
      "parentEvent": undefined,
      "parentId": 0,
      "rootId": 109,
      "type": "action",
    },
    "parentId": 109,
    "rootId": 109,
    "type": "flow_resume_error",
  },
  {
    "allParentIds": [
      109,
    ],
    "args": [
      "biscuit",
    ],
    "id": 110,
    "name": "fetchData",
    "parentActionEvent": {
      "allParentIds": [],
      "args": [
        "black",
      ],
      "id": 109,
      "name": "startFetch",
      "parentActionEvent": undefined,
      "parentEvent": undefined,
      "parentId": 0,
      "rootId": 109,
      "type": "action",
    },
    "parentEvent": {
      "allParentIds": [],
      "args": [
        "black",
      ],
      "id": 109,
      "name": "startFetch",
      "parentActionEvent": undefined,
      "parentEvent": undefined,
      "parentId": 0,
      "rootId": 109,
      "type": "action",
    },
    "parentId": 109,
    "rootId": 109,
    "type": "flow_return",
  },
]
`;

exports[`typings 2`] = `
[
  {
    "allParentIds": [],
    "args": [
      "black",
    ],
    "id": 113,
    "name": "startFetch",
    "parentActionEvent": undefined,
    "parentEvent": undefined,
    "parentId": 0,
    "rootId": 113,
    "type": "action",
  },
  {
    "allParentIds": [
      113,
    ],
    "args": [
      "black",
    ],
    "id": 114,
    "name": "fetchData",
    "parentActionEvent": {
      "allParentIds": [],
      "args": [
        "black",
      ],
      "id": 113,
      "name": "startFetch",
      "parentActionEvent": undefined,
      "parentEvent": undefined,
      "parentId": 0,
      "rootId": 113,
      "type": "action",
    },
    "parentEvent": {
      "allParentIds": [],
      "args": [
        "black",
      ],
      "id": 113,
      "name": "startFetch",
      "parentActionEvent": undefined,
      "parentEvent": undefined,
      "parentId": 0,
      "rootId": 113,
      "type": "action",
    },
    "parentId": 113,
    "rootId": 113,
    "type": "flow_spawn",
  },
  {
    "allParentIds": [
      113,
    ],
    "args": [
      undefined,
    ],
    "id": 114,
    "name": "fetchData",
    "parentActionEvent": {
      "allParentIds": [],
      "args": [
        "black",
      ],
      "id": 113,
      "name": "startFetch",
      "parentActionEvent": undefined,
      "parentEvent": undefined,
      "parentId": 0,
      "rootId": 113,
      "type": "action",
    },
    "parentEvent": {
      "allParentIds": [],
      "args": [
        "black",
      ],
      "id": 113,
      "name": "startFetch",
      "parentActionEvent": undefined,
      "parentEvent": undefined,
      "parentId": 0,
      "rootId": 113,
      "type": "action",
    },
    "parentId": 113,
    "rootId": 113,
    "type": "flow_resume",
  },
  {
    "allParentIds": [
      113,
    ],
    "args": [
      "x",
    ],
    "id": 114,
    "name": "fetchData",
    "parentActionEvent": {
      "allParentIds": [],
      "args": [
        "black",
      ],
      "id": 113,
      "name": "startFetch",
      "parentActionEvent": undefined,
      "parentEvent": undefined,
      "parentId": 0,
      "rootId": 113,
      "type": "action",
    },
    "parentEvent": {
      "allParentIds": [],
      "args": [
        "black",
      ],
      "id": 113,
      "name": "startFetch",
      "parentActionEvent": undefined,
      "parentEvent": undefined,
      "parentId": 0,
      "rootId": 113,
      "type": "action",
    },
    "parentId": 113,
    "rootId": 113,
    "type": "flow_resume_error",
  },
  {
    "allParentIds": [
      113,
    ],
    "args": [
      "x",
    ],
    "id": 114,
    "name": "fetchData",
    "parentActionEvent": {
      "allParentIds": [],
      "args": [
        "black",
      ],
      "id": 113,
      "name": "startFetch",
      "parentActionEvent": undefined,
      "parentEvent": undefined,
      "parentId": 0,
      "rootId": 113,
      "type": "action",
    },
    "parentEvent": {
      "allParentIds": [],
      "args": [
        "black",
      ],
      "id": 113,
      "name": "startFetch",
      "parentActionEvent": undefined,
      "parentEvent": undefined,
      "parentId": 0,
      "rootId": 113,
      "type": "action",
    },
    "parentId": 113,
    "rootId": 113,
    "type": "flow_throw",
  },
]
`;

exports[`can handle nested async actions when using decorate 1`] = `
[
  {
    "allParentIds": [],
    "args": [
      "black",
    ],
    "id": 105,
    "name": "startFetch",
    "parentActionEvent": undefined,
    "parentEvent": undefined,
    "parentId": 0,
    "rootId": 105,
    "type": "action",
  },
  {
    "allParentIds": [
      105,
    ],
    "args": [
      "black",
    ],
    "id": 106,
    "name": "fetchData",
    "parentActionEvent": {
      "allParentIds": [],
      "args": [
        "black",
      ],
      "id": 105,
      "name": "startFetch",
      "parentActionEvent": undefined,
      "parentEvent": undefined,
      "parentId": 0,
      "rootId": 105,
      "type": "action",
    },
    "parentEvent": {
      "allParentIds": [],
      "args": [
        "black",
      ],
      "id": 105,
      "name": "startFetch",
      "parentActionEvent": undefined,
      "parentEvent": undefined,
      "parentId": 0,
      "rootId": 105,
      "type": "action",
    },
    "parentId": 105,
    "rootId": 105,
    "type": "flow_spawn",
  },
  {
    "allParentIds": [
      105,
    ],
    "args": [
      undefined,
    ],
    "id": 106,
    "name": "fetchData",
    "parentActionEvent": {
      "allParentIds": [],
      "args": [
        "black",
      ],
      "id": 105,
      "name": "startFetch",
      "parentActionEvent": undefined,
      "parentEvent": undefined,
      "parentId": 0,
      "rootId": 105,
      "type": "action",
    },
    "parentEvent": {
      "allParentIds": [],
      "args": [
        "black",
      ],
      "id": 105,
      "name": "startFetch",
      "parentActionEvent": undefined,
      "parentEvent": undefined,
      "parentId": 0,
      "rootId": 105,
      "type": "action",
    },
    "parentId": 105,
    "rootId": 105,
    "type": "flow_resume",
  },
  {
    "allParentIds": [
      105,
    ],
    "args": [
      "drinking coffee",
    ],
    "id": 106,
    "name": "fetchData",
    "parentActionEvent": {
      "allParentIds": [],
      "args": [
        "black",
      ],
      "id": 105,
      "name": "startFetch",
      "parentActionEvent": undefined,
      "parentEvent": undefined,
      "parentId": 0,
      "rootId": 105,
      "type": "action",
    },
    "parentEvent": {
      "allParentIds": [],
      "args": [
        "black",
      ],
      "id": 105,
      "name": "startFetch",
      "parentActionEvent": undefined,
      "parentEvent": undefined,
      "parentId": 0,
      "rootId": 105,
      "type": "action",
    },
    "parentId": 105,
    "rootId": 105,
    "type": "flow_resume",
  },
  {
    "allParentIds": [
      105,
    ],
    "args": [
      "awake",
    ],
    "id": 106,
    "name": "fetchData",
    "parentActionEvent": {
      "allParentIds": [],
      "args": [
        "black",
      ],
      "id": 105,
      "name": "startFetch",
      "parentActionEvent": undefined,
      "parentEvent": undefined,
      "parentId": 0,
      "rootId": 105,
      "type": "action",
    },
    "parentEvent": {
      "allParentIds": [],
      "args": [
        "black",
      ],
      "id": 105,
      "name": "startFetch",
      "parentActionEvent": undefined,
      "parentEvent": undefined,
      "parentId": 0,
      "rootId": 105,
      "type": "action",
    },
    "parentId": 105,
    "rootId": 105,
    "type": "flow_return",
  },
]
`;

exports[`can handle nested async actions when using decorate 2`] = `
[
  {
    "allParentIds": [],
    "args": [
      "black",
    ],
    "id": 127,
    "name": "startFetch",
    "parentActionEvent": undefined,
    "parentEvent": undefined,
    "parentId": 0,
    "rootId": 127,
    "type": "action",
  },
  {
    "allParentIds": [
      127,
    ],
    "args": [
      "black",
    ],
    "id": 128,
    "name": "fetchData",
    "parentActionEvent": {
      "allParentIds": [],
      "args": [
        "black",
      ],
      "id": 127,
      "name": "startFetch",
      "parentActionEvent": undefined,
      "parentEvent": undefined,
      "parentId": 0,
      "rootId": 127,
      "type": "action",
    },
    "parentEvent": {
      "allParentIds": [],
      "args": [
        "black",
      ],
      "id": 127,
      "name": "startFetch",
      "parentActionEvent": undefined,
      "parentEvent": undefined,
      "parentId": 0,
      "rootId": 127,
      "type": "action",
    },
    "parentId": 127,
    "rootId": 127,
    "type": "flow_spawn",
  },
  {
    "allParentIds": [
      127,
    ],
    "args": [
      undefined,
    ],
    "id": 128,
    "name": "fetchData",
    "parentActionEvent": {
      "allParentIds": [],
      "args": [
        "black",
      ],
      "id": 127,
      "name": "startFetch",
      "parentActionEvent": undefined,
      "parentEvent": undefined,
      "parentId": 0,
      "rootId": 127,
      "type": "action",
    },
    "parentEvent": {
      "allParentIds": [],
      "args": [
        "black",
      ],
      "id": 127,
      "name": "startFetch",
      "parentActionEvent": undefined,
      "parentEvent": undefined,
      "parentId": 0,
      "rootId": 127,
      "type": "action",
    },
    "parentId": 127,
    "rootId": 127,
    "type": "flow_resume",
  },
  {
    "allParentIds": [
      127,
      128,
    ],
    "args": [
      "drinking black",
    ],
    "id": 129,
    "name": "uppercase",
    "parentActionEvent": {
      "allParentIds": [],
      "args": [
        "black",
      ],
      "id": 127,
      "name": "startFetch",
      "parentActionEvent": undefined,
      "parentEvent": undefined,
      "parentId": 0,
      "rootId": 127,
      "type": "action",
    },
    "parentEvent": {
      "allParentIds": [
        127,
      ],
      "args": [
        undefined,
      ],
      "id": 128,
      "name": "fetchData",
      "parentActionEvent": {
        "allParentIds": [],
        "args": [
          "black",
        ],
        "id": 127,
        "name": "startFetch",
        "parentActionEvent": undefined,
        "parentEvent": undefined,
        "parentId": 0,
        "rootId": 127,
        "type": "action",
      },
      "parentEvent": {
        "allParentIds": [],
        "args": [
          "black",
        ],
        "id": 127,
        "name": "startFetch",
        "parentActionEvent": undefined,
        "parentEvent": undefined,
        "parentId": 0,
        "rootId": 127,
        "type": "action",
      },
      "parentId": 127,
      "rootId": 127,
      "type": "flow_resume",
    },
    "parentId": 128,
    "rootId": 127,
    "type": "flow_spawn",
  },
  {
    "allParentIds": [
      127,
      128,
    ],
    "args": [
      undefined,
    ],
    "id": 129,
    "name": "uppercase",
    "parentActionEvent": {
      "allParentIds": [],
      "args": [
        "black",
      ],
      "id": 127,
      "name": "startFetch",
      "parentActionEvent": undefined,
      "parentEvent": undefined,
      "parentId": 0,
      "rootId": 127,
      "type": "action",
    },
    "parentEvent": {
      "allParentIds": [
        127,
      ],
      "args": [
        undefined,
      ],
      "id": 128,
      "name": "fetchData",
      "parentActionEvent": {
        "allParentIds": [],
        "args": [
          "black",
        ],
        "id": 127,
        "name": "startFetch",
        "parentActionEvent": undefined,
        "parentEvent": undefined,
        "parentId": 0,
        "rootId": 127,
        "type": "action",
      },
      "parentEvent": {
        "allParentIds": [],
        "args": [
          "black",
        ],
        "id": 127,
        "name": "startFetch",
        "parentActionEvent": undefined,
        "parentEvent": undefined,
        "parentId": 0,
        "rootId": 127,
        "type": "action",
      },
      "parentId": 127,
      "rootId": 127,
      "type": "flow_resume",
    },
    "parentId": 128,
    "rootId": 127,
    "type": "flow_resume",
  },
  {
    "allParentIds": [
      127,
      128,
    ],
    "args": [
      "DRINKING BLACK",
    ],
    "id": 129,
    "name": "uppercase",
    "parentActionEvent": {
      "allParentIds": [],
      "args": [
        "black",
      ],
      "id": 127,
      "name": "startFetch",
      "parentActionEvent": undefined,
      "parentEvent": undefined,
      "parentId": 0,
      "rootId": 127,
      "type": "action",
    },
    "parentEvent": {
      "allParentIds": [
        127,
      ],
      "args": [
        undefined,
      ],
      "id": 128,
      "name": "fetchData",
      "parentActionEvent": {
        "allParentIds": [],
        "args": [
          "black",
        ],
        "id": 127,
        "name": "startFetch",
        "parentActionEvent": undefined,
        "parentEvent": undefined,
        "parentId": 0,
        "rootId": 127,
        "type": "action",
      },
      "parentEvent": {
        "allParentIds": [],
        "args": [
          "black",
        ],
        "id": 127,
        "name": "startFetch",
        "parentActionEvent": undefined,
        "parentEvent": undefined,
        "parentId": 0,
        "rootId": 127,
        "type": "action",
      },
      "parentId": 127,
      "rootId": 127,
      "type": "flow_resume",
    },
    "parentId": 128,
    "rootId": 127,
    "type": "flow_resume",
  },
  {
    "allParentIds": [
      127,
      128,
    ],
    "args": [
      "DRINKING BLACK",
    ],
    "id": 129,
    "name": "uppercase",
    "parentActionEvent": {
      "allParentIds": [],
      "args": [
        "black",
      ],
      "id": 127,
      "name": "startFetch",
      "parentActionEvent": undefined,
      "parentEvent": undefined,
      "parentId": 0,
      "rootId": 127,
      "type": "action",
    },
    "parentEvent": {
      "allParentIds": [
        127,
      ],
      "args": [
        undefined,
      ],
      "id": 128,
      "name": "fetchData",
      "parentActionEvent": {
        "allParentIds": [],
        "args": [
          "black",
        ],
        "id": 127,
        "name": "startFetch",
        "parentActionEvent": undefined,
        "parentEvent": undefined,
        "parentId": 0,
        "rootId": 127,
        "type": "action",
      },
      "parentEvent": {
        "allParentIds": [],
        "args": [
          "black",
        ],
        "id": 127,
        "name": "startFetch",
        "parentActionEvent": undefined,
        "parentEvent": undefined,
        "parentId": 0,
        "rootId": 127,
        "type": "action",
      },
      "parentId": 127,
      "rootId": 127,
      "type": "flow_resume",
    },
    "parentId": 128,
    "rootId": 127,
    "type": "flow_return",
  },
  {
    "allParentIds": [
      127,
    ],
    "args": [
      "DRINKING BLACK",
    ],
    "id": 128,
    "name": "fetchData",
    "parentActionEvent": {
      "allParentIds": [],
      "args": [
        "black",
      ],
      "id": 127,
      "name": "startFetch",
      "parentActionEvent": undefined,
      "parentEvent": undefined,
      "parentId": 0,
      "rootId": 127,
      "type": "action",
    },
    "parentEvent": {
      "allParentIds": [],
      "args": [
        "black",
      ],
      "id": 127,
      "name": "startFetch",
      "parentActionEvent": undefined,
      "parentEvent": undefined,
      "parentId": 0,
      "rootId": 127,
      "type": "action",
    },
    "parentId": 127,
    "rootId": 127,
    "type": "flow_resume",
  },
  {
    "allParentIds": [
      127,
    ],
    "args": [
      "DRINKING BLACK",
    ],
    "id": 128,
    "name": "fetchData",
    "parentActionEvent": {
      "allParentIds": [],
      "args": [
        "black",
      ],
      "id": 127,
      "name": "startFetch",
      "parentActionEvent": undefined,
      "parentEvent": undefined,
      "parentId": 0,
      "rootId": 127,
      "type": "action",
    },
    "parentEvent": {
      "allParentIds": [],
      "args": [
        "black",
      ],
      "id": 127,
      "name": "startFetch",
      "parentActionEvent": undefined,
      "parentEvent": undefined,
      "parentId": 0,
      "rootId": 127,
      "type": "action",
    },
    "parentId": 127,
    "rootId": 127,
    "type": "flow_return",
  },
]
`;
